--- a/web/index.html
+++ b/web/index.html
@@ -31,7 +31,14 @@
 
   <title>literahub</title>
   <link rel="manifest" href="manifest.json">
+  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"  type="application/javascript"></script>
 
+  <script type="application/javascript" src="/assets/packages/flutter_inappwebview_web/assets/web/web_support.js" defer></script>
+
+  <script src="//cdnjs.cloudflare.com/ajax/libs/pdf.js/2.11.338/pdf.min.js"></script>
+  <script type="text/javascript">
+   pdfjsLib.GlobalWorkerOptions.workerSrc = "//cdnjs.cloudflare.com/ajax/libs/pdf.js/2.11.338/pdf.worker.min.js";
+</script>
   <script>
     // The value below is injected by flutter build, do not touch.
     const serviceWorkerVersion = null;
